add new common project and refactor project catalogservice