@@ -4,22 +4,27 @@ import java.math.BigDecimal;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import com.project.catalogservice.application.ports.input.GetProductById;
-import com.project.catalogservice.application.ports.input.GetProductsByNameAndDescription;
-import com.project.catalogservice.application.ports.output.CreateProductOutput;
-import com.project.catalogservice.infrastruct.product.input.request.UpdateProductRequest;
-import com.project.catalogservice.infrastruct.product.input.response.CreateProductResponse;
-import com.project.catalogservice.infrastruct.product.input.response.PaginatedResponse;
-import com.project.catalogservice.infrastruct.product.input.response.ProductResponse;
-import com.project.catalogservice.infrastruct.product.input.response.UpdateProductResponse;
+import com.project.catalogservice.product.application.output.CreateProductOutput;
+import com.project.catalogservice.product.application.output.GetProductOutput;
+import com.project.catalogservice.product.application.ports.input.GetProductById;
+import com.project.catalogservice.product.application.ports.input.GetProductsByNameAndDescription;
+import com.project.catalogservice.product.common.output.PaginatedResponse;
+import com.project.catalogservice.product.domain.ProductId;
+import com.project.catalogservice.product.infrastruct.input.input.mapper.ProductControllerMapper;
+import com.project.catalogservice.product.infrastruct.input.input.request.UpdateProductRequest;
+import com.project.catalogservice.product.infrastruct.input.input.response.CreateProductResponse;
+import com.project.catalogservice.product.infrastruct.input.input.response.GetProductResponse;
+import com.project.catalogservice.product.infrastruct.input.input.response.UpdateProductResponse;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
@@ -32,10 +37,9 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
-import com.project.catalogservice.application.ports.input.CreateProduct;
-import com.project.catalogservice.domain.Product;
-import com.project.catalogservice.infrastruct.product.input.ProductController;
-import com.project.catalogservice.infrastruct.product.input.request.CreateProductRequest;
+import com.project.catalogservice.product.application.ports.input.CreateProduct;
+import com.project.catalogservice.product.infrastruct.input.input.ProductController;
+import com.project.catalogservice.product.infrastruct.input.input.request.CreateProductRequest;
 
 @WebMvcTest(ProductController.class)
 public class ProductControllerTest {
@@ -59,24 +63,30 @@ public class ProductControllerTest {
 
     CreateProductResponse createResponse;
 
-    CreateProductOutput serviceOutputResponse;
+    CreateProductOutput createProductOutput;
 
     UpdateProductRequest updateRequest;
 
     UpdateProductResponse updateResponse;
 
+    GetProductOutput getProductOutput;
+
+    GetProductResponse getResponse;
+
     @BeforeEach
     public void setup() {
         createRequest = new CreateProductRequest("Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS");
-        createResponse = new CreateProductResponse(1L,"Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS", "AVAILABLE", LocalDate.now());
-        serviceOutputResponse = new CreateProductOutput(1L,"Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS", "AVAILABLE", LocalDate.now());
+        createProductOutput = new CreateProductOutput(ProductId.generate().getValue(), "Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS", "AVAILABLE", LocalDate.now());
+        createResponse = ProductControllerMapper.toResponse(createProductOutput);
+        getProductOutput = new GetProductOutput(ProductId.generate().getValue(),"Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS", "AVAILABLE", LocalDate.now());
+        getResponse = ProductControllerMapper.toResponse(getProductOutput);
     }
     
     @Test
     public void shouldCreateProductAndReturnSuccess() throws Exception {
         // Arrange
         String request = objectMapper.writeValueAsString(new CreateProductRequest( "Laptop", BigDecimal.valueOf(99.99), "It is a new HP Laptop", "ELECTRONICS"));
-        when(createProduct.execute(any())).thenReturn(serviceOutputResponse);
+        when(createProduct.execute(any())).thenReturn(createProductOutput);
 
         // Act and Assert
         mockMvc.perform(MockMvcRequestBuilders.post("/product/create")
@@ -112,19 +122,19 @@ public class ProductControllerTest {
     @Test
     public void shouldReturnProductWhenIdisNotNull() throws Exception {
         // Arrange
-        when(getProductById.execute(any())).thenReturn(response);
+        when(getProductById.execute(any())).thenReturn(getProductOutput);
 
         // Act and Assert
-        mockMvc.perform(MockMvcRequestBuilders.get(String.format("/product/%d",product.getId()))
+        mockMvc.perform(MockMvcRequestBuilders.get(String.format("/product/%d",1L))
                 .contentType(MediaType.APPLICATION_JSON)
                 .accept(MediaType.APPLICATION_JSON)
                 .characterEncoding(StandardCharsets.UTF_8))
         .andExpect(status().isOk())
-        .andExpect(jsonPath("$.id").value(response.id()))
-        .andExpect(jsonPath("$.name").value(response.name()))
-        .andExpect(jsonPath("$.price").value(response.price()))
-        .andExpect(jsonPath("$.description").value(response.description()))
-        .andExpect(jsonPath("$.category").value(response.category()));
+        .andExpect(jsonPath("$.id").value(getResponse.id()))
+        .andExpect(jsonPath("$.name").value(getResponse.name()))
+        .andExpect(jsonPath("$.price").value(getResponse.price()))
+        .andExpect(jsonPath("$.description").value(getResponse.description()))
+        .andExpect(jsonPath("$.category").value(getResponse.category()));
     }
 
     @Test
@@ -133,7 +143,7 @@ public class ProductControllerTest {
         when(getProductById.execute(any())).thenReturn(null);
 
         // Act and Assert
-        mockMvc.perform(MockMvcRequestBuilders.get(String.format("/product/%d",product.getId()))
+        mockMvc.perform(MockMvcRequestBuilders.get(String.format("/product/%d",1L))
                         .contentType(MediaType.APPLICATION_JSON)
                         .accept(MediaType.APPLICATION_JSON)
                         .characterEncoding(StandardCharsets.UTF_8))
@@ -144,13 +154,13 @@ public class ProductControllerTest {
     @Test
     public void shouldReturnTenProductWithSuccess() throws Exception {
         //Arrange
-        List<ProductResponse> productList = IntStream.range(0, 10)
-                .mapToObj(i -> new ProductResponse((long) i, "Book " + i, BigDecimal.valueOf(10 + i), "A new book " + i, "BOOKS", "AVAILABLE", LocalDate.now()))
-                .collect(Collectors.toList());
+         List<GetProductOutput> productList = (IntStream.range(0, 10)
+                .mapToObj(i -> new GetProductOutput(ProductId.generate().getValue(), "Book " + i, BigDecimal.valueOf(10 + i), "A new book " + i, "BOOKS", "AVAILABLE", LocalDate.now()))
+                .toList());
 
-        PaginatedResponse<ProductResponse> paginatedResponse = new PaginatedResponse<>(productList, 1, false);
+        PaginatedResponse<GetProductOutput> paginatedResponse = new PaginatedResponse<>(productList, 0, false);
 
-        when(getProductsByNameAndDescription.execute(any(),any(),any())).thenReturn(paginatedResponse);
+        when(getProductsByNameAndDescription.execute(any())).thenReturn(paginatedResponse);
 
         // Act and Assert
         mockMvc.perform(MockMvcRequestBuilders.get("/product/get-products?name=Book&description=new%book&page=0&size=10&sort=name")
@@ -164,9 +174,9 @@ public class ProductControllerTest {
     @Test
     public void shouldReturnEmptyListWhenNoProductsExist() throws Exception {
         //Arrange
-        PaginatedResponse<ProductResponse> emptyResponse = new PaginatedResponse<>(null, 0, false);
+        PaginatedResponse<GetProductOutput> paginatedResponse = new PaginatedResponse<>(null, 0, false);
 
-        when(getProductsByNameAndDescription.execute(any(), any(), any())).thenReturn(emptyResponse);
+        when(getProductsByNameAndDescription.execute(any())).thenReturn(paginatedResponse);
 
         // Act and Assert
         mockMvc.perform(MockMvcRequestBuilders.get("/product/get-products?name=Book&description=new%book&page=0&size=10&sort=name")
